<resources>
    <string name="app_name">Sessionway</string>
    <string name="app_name_con">Sessionway</string>
    <string name="gps_tital">GPS settings</string>
    <string name="gps_content">"GPS is not enabled. Do you want to go to settings menu?"</string>
    <string name="gps_loc">"GPS is not enabled.Please on your location"</string>
    <string name="settings">Settings</string>
    <string name="msg_cancel">Cancel</string>
    <string name="connection">Please check your internet connection</string>
    <string name="something_wrong">Something went wrong, please try again later.</string>
    <string name="network_available">You do not have any network.</string>
    <string name="unauthorized_error">Your Not Authorised User...</string>
    <string name="registration_profile_img">Profile Image</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="registration_registration">Registration</string>
    <string name="reg_already_have_an_account">Already have an account ?</string>
    <string name="registration_fullname">full name</string>
    <string name="hint_username">Enter login UserID</string>
    <string name="hint_usernames">Login user id</string>
    <string name="registration_dob">date of birth</string>
    <string name="registration_yes_i_am_consultant">Yes, I am Counsultant.</string>
    <string name="hint_confirm_password">confirm your Password</string>
    <string name="hint_confirm_passwords">Confirm Password</string>
    <string name="registration_mobile">Mobile Number</string>
    <string name="hint_code">Code</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_email_confirm">Enter confirm Email</string>
    <string name="login_email_user">Email or User id</string>
    <string name="hint_password">Enter your Password</string>
    <string name="hint_passwords">Password</string>
    <string name="login_login">Login</string>
    <string name="login_donot_have_account">Don\'t have an account ?</string>
    <string name="login_forgot_password">Forgot Password ?</string>
    <string name="login_click_here">Click here</string>
    <string name="logo_icon">Logo Icon</string>
    <string name="select_country">Select Country</string>
    <string name="select_category">Select Category</string>
    <string name="select_search_lang">Select Language</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="country">Country</string>
    <string name="lang">Language</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">SignUp</string>
    <string name="skip">Skip</string>
    <string name="my_consultant">My Consultant</string>
    <string name="address">address</string>
    <string name="consultant">Consultant</string>
    <string name="client" translatable="false">Normal User</string>
    <string name="registration_sign_up">SIGN UP</string>
    <string name="error_name">Please enter your fullname!</string>
    <string name="error_name_invalid">Invalid fullname!</string>
    <string name="error_email">Please enter email address!</string>
    <string name="error_email_invalid">Invalid email address!</string>
    <string name="error_coutnry_code">Please provide country code!</string>
    <string name="error_mobile">Please provide mobile number!</string>
    <string name="error_mobile_invalid">Invald mobile number!</string>
    <string name="error_username">Please enter Username</string>
    <string name="error_username_invalid">Invalid username</string>
    <string name="error_pwd">Please enter password</string>
    <string name="error_pwd_invalid">Password must be 4 character long!</string>
    <string name="error_confirm_pwd">Re-enter Password!</string>
    <string name="error_confirm_pwd_invalid">Passwords does not match!</string>
    <string name="error_countryid">Select the country.</string>
    <string name="error_categoryid">Select the Category.</string>
    <string name="error_subCateId">Select SubCategory</string>
    <string name="btn_forgot">Reset Password</string>
    <string name="chat">Chat</string>
    <string name="counsultant">Consultant</string>
    <string name="profile">Profile</string>
    <string name="done">Done</string>
    <string name="confirmation" translatable="false">Please wait a while we verify your number</string>
    <string name="confirmation_text" translatable="false">Enter the code sent to </string>
    <string name="otp_code">Enter otp</string>
    <string name="ok">Okay</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="resend_code"><u>RESEND</u></string>
    <string name="resend_code_btn">Resend Code</string>
    <string name="verification_way">Choose for Verification</string>
    <string name="mobile_verification">Mobile Verification</string>
    <string name="email_verif">Email Verification</string>
    <string name="or">Or</string>
    <string name="verification">Verification</string>
    <string name="choose_your_consultant" translatable="false">CHOOSE YOUR CONSULTANT</string>
    <string name="search">Search</string>
    <string name="home">Sessionway</string>
    <string name="header_email">Email</string>
    <string name="header_userid">Login UserID</string>
    <string name="header_password">Password</string>
    <string name="header_confirm_pwd">Confirm Password</string>
    <string name="next">Next</string>
    <string name="header_fullname">Full name</string>
    <string name="hint_fullname">Enter Full Name</string>
    <string name="hint_fullnames">Full name</string>
    <string name="header_mobile">Enter Mobile Number</string>
    <string name="header_country">Select Country</string>
    <string name="back">Back</string>
    <string name="header_selection">Are you Consultant or Normal User?</string>
    <string name="header_freelncr_orgn">Are you Organization or Freelancer</string>
    <string name="freelancer">Freelancer</string>
    <string name="organization">Organization</string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="hint_country">Select a choice</string>
    <string name="error_otp">Enter otp!</string>
    <string name="title_activity_maps">Map</string>
    <string name="gcm_id_error">Unable to get registration id from GCM</string>
    <string name="chat_msg">type message here...</string>
    <string name="lang_selection">Select Your Languages</string>
    <string name="select">Select</string>
    <string name="btn_done">Done</string>
    <string name="languages">Languages</string>
    <string name="setCategory">Select Your Category</string>
    <string name="setSubCategory">Select Your SubCategory</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="buttonText">Click to begin please</string>
    <string name="rationale_video_app">This app needs access to your camera and mic so you can perform video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="default_media_location_folder">Applozic</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="application_key">1f0c8fa743c2b0d1075e65023e5664ced</string>
    <string name="facebook_app_id">764579490993853</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="txt_register1">Create an account</string>
    <string name="txt_register2">Already have an account?</string>
    <string name="txt_back">Login</string>
    <string name="txt_register3">Update your Profile</string>
    <string name="verification_txt">Did not get the code?</string>
    <string name="verify">Verify</string>
    <string name="forgot_txt">Forgot password?</string>
    <string name="reset_txt">Reset password?</string>
    <string name="forgot_pwd">Registered Email ID</string>
    <string name="forgot_txt1">Back to Login Page</string>
    <string name="forgot_txt2">We just need your registered Email Id to send you password reset instruction</string>
    <string name="permission">Permission</string>
    <string name="img_valid">Please choose profile image.</string>
    <string name="search_country">Search Country</string>
    <string name="search_consultant">Search Consultant</string>
    <string name="search_catg">Search Category</string>
    <string name="search_sub_catg">Search Sub Category</string>
    <string name="search_lang">Search Language</string>
    <string name="search_lang_pref">Select Preference Language</string>
    <string name="select_lang">Select Your Language            اختر لغتك</string>
    <string name="select_lang_pref">Preference Language</string>
    <string name="your_lang_pref">Your Preference Language</string>
    <string name="lang_selection_valid">please select at least one language. </string>
    <string name="email_prof">Email :</string>
    <string name="prof_detail">MY DETAILS</string>
    <string name="prof_mobile">Mobile:</string>
    <string name="prof_fees">Fees :</string>
    <string name="prof_catg">Category:</string>
    <string name="prof_subCateg">Sub Category :</string>
    <string name="prof_country">Country :</string>
    <string name="prof_lang">Languages :</string>
    <string name="update">Update</string>
    <string name="add_bank_detail" translatable="false">Add Bank Detail</string>
    <string name="bank_detail">Bank Detail</string>
    <string name="add_address" translatable="false">Add Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pwd">Change Password</string>
    <string name="change_status">Change Status</string>
    <string name="logout">Logout</string>
    <string name="change_invite">Invite a friend</string>
    <string name="coureses">Courses</string>
    <string name="report">Report Feedback Or a Problem</string>
    <string name="client_name" translatable="false">Clint Name</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="finacial">Financial</string>
    <string name="msg_otp1">Didn\'t receive the OTP?</string>
    <string name="send_story">Send Story</string>
    <string name="msg_story">Add Story</string>
    <string name="hint_write_about">Write About</string>
    <string name="create_group">Create Group</string>
    <string name="select_cover">Select Cover</string>
    <string name="replace_video">Replace Video</string>
    <string name="edit_introduction">Edit the introduction</string>
    <string name="otp">OTP</string>
    <string name="delete_account">Delete my account</string>
    <string name="tc_msg1">Do you understand and accept the Sessionway policies?</string>
    <string name="tc_msg2">By accepting this you are confirming that the following are accurate:</string>
    <string name="tc_1"> I confirm that I am aged 16 or over.</string>
    <string name="tc_2"> I agree to comply with the <b><font fgcolor='#00ABEB'>Terms &amp; Conditions </font></b>and <b><font fgcolor='#00ABEB'>Community Guidelines.</font></b></string>
    <string name="tc_3"> I Consent to my personal information being used as described in the <b><font fgcolor='#00ABEB'>Privacy Policy.</font></b></string>
    <string name="note"><b>Note-</b>This consent can be withdrawn at any time by deleting your account.</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_exit">Exit</string>
    <string name="create_channel">Create My Channel</string>
</resources>