<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_edit_profile"
        android:title="@string/edit_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_edit_report"
        android:title="@string/report"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/menu_pwd"
        android:title="@string/change_pwd"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_invite"
        android:title="@string/change_invite"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>