<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_select_cover"
        android:orderInCategory="100"
        android:title="@string/select_cover"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_replace_video"
        android:orderInCategory="100"
        android:title="@string/replace_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_edit_introduction"
        android:orderInCategory="100"
        android:title="@string/edit_introduction"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_cancel"
        android:orderInCategory="100"
        android:title="@string/cancel"
        app:showAsAction="never" />

</menu>