<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    tools:context=".activity.TermsConditionPage">



    <com.app.session.customview.CustomTextView
        android:id="@+id/txtmsg1"
        android:layout_width="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tc_msg1"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:edittextfont="Roboto-Bold.ttf"
       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_actionbar" />
    <CheckBox
        android:id="@+id/checkTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmsg1" />
    <com.app.session.customview.CustomTextView
        android:id="@+id/txtmsg2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/tc_msg2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:edittextfont="Roboto-Regular.ttf"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkTC"
        app:layout_constraintTop_toBottomOf="@+id/txtmsg1" />

    <com.app.session.customview.CustomTextView
        android:id="@+id/txttc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="22dp"
        android:text="@string/tc_1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:edittextfont="Roboto-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTC" />

    <com.app.session.customview.CustomTextView
        android:id="@+id/txttc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"

        android:text="@string/tc_2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:edittextfont="Roboto-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttc1" />

    <com.app.session.customview.CustomTextView
        android:id="@+id/txttc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"

        android:text="@string/tc_3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:edittextfont="Roboto-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttc2" />

    <com.app.session.customview.CustomTextView
        android:id="@+id/txttc4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:edittextfont="Roboto-Regular.ttf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttc3" />

    <com.app.session.customview.CustomTextView
        android:id="@+id/btn_continue"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"

        android:layout_marginRight="10dp"

        android:background="@drawable/btn_blue_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn_continue"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:edittextfont="OpenSans-Bold.ttf"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttc4" />
    <com.app.session.customview.CustomTextView
        android:id="@+id/btn_exit"

        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="24dp"

        android:layout_marginLeft="10dp"

        android:background="@drawable/btn_blue_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn_exit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:edittextfont="OpenSans-Bold.ttf"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttc4" />

    <include layout="@layout/toolbar_terms" />


</androidx.constraintlayout.widget.ConstraintLayout>