<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9">

        <com.app.session.customview.CustomTextView
            android:id="@+id/txt_userName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:padding="@dimen/value10"
            android:singleLine="true"
            android:text="@string/client_name"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:edittextfont="OpenSans-Regular.ttf" />

        <com.app.session.customview.CustomTextView
            android:id="@+id/txt_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/value10"
            android:singleLine="true"

            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:edittextfont="OpenSans-Regular.ttf" />

        <com.app.session.customview.CustomTextView
            android:id="@+id/txt_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/value10"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/value10"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:edittextfont="OpenSans-Regular.ttf" />

    </LinearLayout>
    <!--</androidx.cardview.widget.CardView>-->
</androidx.cardview.widget.CardView>
